# mayker-ordertool-1

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.claude/: feature_map.md  project_state.json  settings.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_order_menu_item.py  0002_add_guests_and_selections.py
backend/app/: config.py  constants.py  database.py  error_handlers.py  exceptions.py  logging_config.py  main.py
backend/app/api/: deps.py  email.py  guests.py  orders.py
backend/app/models/: __init__.py  guest.py  guest_selection.py  menu_item.py  order.py
backend/app/repositories/: guest_repository.py  guest_selection_repository.py  menu_item_repository.py  order_repository.py
backend/app/schemas/: email.py  export.py  guest.py  menu_item.py  order.py
backend/app/services/: email_builder.py  email_sender.py  email_service.py  export_builder.py  guest_mapping.py  guest_service.py  order_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_email_router_integration.py  test_guest_repository_integration.py  test_guests_router_integration.py  test_menu_item_repository_integration.py  test_order_repository_integration.py  test_orders_router_integration.py
backend/tests/unit/: test_email_builder_unit.py  test_email_sender_unit.py  test_email_service_unit.py  test_export_builder_unit.py  test_guest_service_unit.py  test_order_service_unit.py
docs/: DEVELOPMENT.md
(+120 files in other folders)
